# AiML-financial-fraud-detection-model

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
flask-app/: dockerfile  requirements.txt  serve_model.py  test_api.py
flask-app/models/: fraud_detection_xgb_model.pkl
flask-app/test/: test_api.py
models/: creditCard_lr_model.joblib
notebooks/: MLOps.ipynb  Untitled.ipynb  data_cleaning.ipynb  eda.ipynb  feature_engineering.html  feature_engineering.ipynb  model_explainer.ipynb  model_training.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/00e13b8d2a69448ba89e3d6c3e2ffbb4/: meta.yaml
notebooks/mlruns/0/05e4d225f623439db9bc8cea5a161bca/: meta.yaml
notebooks/mlruns/0/06697df332774a7d810d352e15c16ee4/: meta.yaml
notebooks/mlruns/0/0aec59a892c141569aa6f540c922d948/: meta.yaml
notebooks/mlruns/0/0bb15488713247cfb86b5f529e6056f1/: meta.yaml
notebooks/mlruns/0/11c7622b8fc34b61b7f797300ee54544/: meta.yaml
notebooks/mlruns/0/1592754ca7d14c759d07057e244f465d/: meta.yaml
notebooks/mlruns/0/1faa6c815f274dc0954e38851be13789/: meta.yaml
notebooks/mlruns/0/223c6b2e2d5549de8917382557f88522/: meta.yaml
notebooks/mlruns/0/246f040748a4495fae62499b3cf2a1de/: meta.yaml
notebooks/mlruns/185389471624214566/: meta.yaml
notebooks/mlruns/911815464912040869/: meta.yaml
scripts/: data_cleaning.py  eda copy.py  eda.py  eda_creditcard.py  feature_engineering.py  mlops_pipeline.py  mlops_tracking.py  model_training.py
scripts/model_explainers/: lime_explainer.py  model_explainer.py
(+772 files in other folders)
